--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/hobbyist
+spring.datasource.username=joofjero
+spring.datasource.password=Happyness12
+spring.jpa.hibernate.ddl-auto=update
 
